2.7.0. Coordinate ascent tuning of leaf models; only "split" features are eligible to be used in split nodes; faster TreeExtra version with parallel baging